--- a/e-commerce/templates/base.html.twig
+++ b/e-commerce/templates/base.html.twig
@@ -6,7 +6,8 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
+            <link rel="stylesheet" href="https://bootswatch.com/5/lumen/bootstrap.min.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         {% endblock %}
 
         {% block javascripts %}
@@ -14,6 +15,10 @@
         {% endblock %}
     </head>
     <body>
+ {% include "shared/_navbar.html.twig" %}
+
+<div class="container pt-5">
         {% block body %}{% endblock %}
+</div>
     </body>
 </html>
