--- a/e-commerce/templates/hello.html.twig
+++ b/e-commerce/templates/hello.html.twig
@@ -1,11 +1,22 @@
 {% extends "base.html.twig" %}
+ {% block title %}
+    hello {{prenom}}
+ {% endblock %}
 
 {% block body %}
     
     <h1>Hello {{prenom}}</h1>
+
+    <h2>Nos formateurs</h2>
+
+    {% set formateur = formateur1 %}
+    {% include "_formateur.html.twig" %} 
+{# METHODE AVEC LE SET OU LE WITH #}
+
+    {% include "_formateur.html.twig"  with {"formateur": formateur2} %}
+{# with { tableau en rapport avec la page incluse, tableau avec accolade en twig } #}
     
 {% endblock %}
-
 
 
 
