--- a/e-commerce/templates/home/index.html.twig
+++ b/e-commerce/templates/home/index.html.twig
@@ -15,11 +15,12 @@
                 alt="Image du produit">
                 <div class="card-body">
                     <h4 class="card-title">{{ p.name }} ({{ p.price / 100}} €)</h4>
-                    <span class="badge badge-info text-black">
+                    <span class="badge bg-info">
                         {{ p.category.name}}
                     </span>
                     <p class="card-text">{{ p.shortDescription }}</p>
-                    <a href="#" class="btn btn-primary btn-sm">Détails</a>
+                    <a href="{{ path("product_show", {"category_slug": p.category.slug,
+                    "slug" : p.slug}) }}" class="btn btn-primary btn-sm">Détails</a>
                     <a href="#" class="btn btn-success btn-sm">Ajouter</a>
 
                 </div>
