--- a/e-commerce/templates/product/category.html.twig
+++ b/e-commerce/templates/product/category.html.twig
@@ -8,7 +8,7 @@
 
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Accueil</a></li>
+        <li class="breadcrumb-item"><a href="{{ path("homepage") }}">Accueil</a></li>
         <li class="breadcrumb-item active">{{ category.name }}</li>
     </ol> 
     <h1>Catégorie : {{ category.name }}</h1>
@@ -26,7 +26,8 @@
                         {{ p.category.name}}
                     </span>
                     <p class="card-text">{{ p.shortDescription }}</p>
-                    <a href="#" class="btn btn-primary btn-sm">Détails</a>
+                    <a href="{{ path("product_show", {"category_slug": p.category.slug,
+                    "slug" : p.slug}) }}" class="btn btn-primary btn-sm">Détails</a>
                     <a href="#" class="btn btn-success btn-sm">Ajouter</a>
 
                 </div>
