--- a/e-commerce/templates/product/edit.html.twig
+++ b/e-commerce/templates/product/edit.html.twig
@@ -1,21 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{# {% form_theme formView "bootstrap_4_layout.html.twig" %} #}
-
 {% block title %}
-    Création d'un produit
+    Edition de {{ product.name }}
 {% endblock %}
 
-
-
-
-
 {% block body %}
+    <h1>Editer le produit {{ product.name }}</h1>
 
-    <h1>Nouveau produit</h1>
-    {# {{ form(formView) }} #}
-
-    {{ form_start(formView) }}
+      {{ form_start(formView) }}
     {{ form_errors(formView) }}
     {# {{ form_widget(formView) }} #}
 
@@ -37,22 +29,9 @@
   
     <button type="submit" class="btn btn-primary">
         <i class="fas fa-save"></i>
-        Créer le produit
+        Modifier le produit
     </button>
 
     {{ form_end(formView) }}
 
-
-
 {% endblock %}
-
-{# {% block form_row %}
-
-    <div class="form-group">
-        {{ form_label(form) }} 
-        {{ form_widget(form, {"attr": {"class": "form-control"} }) }}
-        {{ form_help(form) }}
-        {{ form_errors(form) }}
-    </div>
-
-{% endblock %} #}
