--- a/e-commerce/templates/security/login.html.twig
+++ b/e-commerce/templates/security/login.html.twig
@@ -4,6 +4,12 @@
 
 {% block body %}
     <h1>Connexion</h1>
+    
+    {% if error %}
+        <div class="alert alert-danger">
+            {{ error.message }}
+        </div>        
+    {% endif %}
 
     {{ form_start(formView) }}
 
