--- a/e-commerce/templates/shared/_navbar.html.twig
+++ b/e-commerce/templates/shared/_navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Symshop</a>
+    <a class="navbar-brand" href="/">Symshop</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,9 +18,15 @@
       </ul>
 
       <ul class="navbar-nav">
+        {% if app.user %}          
+          <li class="nav-item"><a href={{ path("security_logout") }} class=" btn btn-danger">Logout</a></li>    
+
+        {% else %}
+
         <li class="nav-item"><a href="#" class="nav-link">Inscription</a></li>
-        <li class="nav-item"><a href="#" class="btn btn-success">Login</a></li>
-        <li class="nav-item"><a href="#" class=" btn btn-danger">Logout</a></li>
+        <li class="nav-item"><a href={{ path("security_login") }} class="btn btn-success">Login</a></li>
+        {% endif %}
+
       </ul>
       
     </div>
