--- a/e-commerce/templates/home/index.html.twig
+++ b/e-commerce/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} HomeController!{% endblock %}
+{% block title %} Accueil {% endblock %}
 
 {% block body %}
 
