--- a/e-commerce/templates/base.html.twig
+++ b/e-commerce/templates/base.html.twig
@@ -19,6 +19,15 @@
 
 
 <div class="container pt-5">
+
+    {% for rubrique, messages in app.flashes %}
+        <div class="alert alert-{{rubrique}}">
+            {% for message in messages %}
+                <p>{{ message }}</p>
+            {% endfor %}
+        </div>
+    {% endfor %}
+
         {% block body %}{% endblock %}
 </div>
     </body>
