--- a/e-commerce/templates/product/category.html.twig
+++ b/e-commerce/templates/product/category.html.twig
@@ -17,21 +17,7 @@
     
     {% for p in category.products %}
         <div class="col-3">
-            <div class="card">
-                <img src={{ p.mainPicture }} class="img-fluid" 
-                alt="Image du produit">
-                <div class="card-body">
-                    <h4 class="card-title">{{ p.name }} ({{ p.price / 100}} €)</h4>
-                    <span class="badge bg-info">
-                        {{ p.category.name}}
-                    </span>
-                    <p class="card-text">{{ p.shortDescription }}</p>
-                    <a href="{{ path("product_show", {"category_slug": p.category.slug,
-                    "slug" : p.slug}) }}" class="btn btn-primary btn-sm">Détails</a>
-                    <a href="#" class="btn btn-success btn-sm">Ajouter</a>
-
-                </div>
-            </div>
+           {% include "product/_product_card.html.twig" %}
         </div>
     {% endfor %}
 
