--- a/e-commerce/templates/shared/_navbar.html.twig
+++ b/e-commerce/templates/shared/_navbar.html.twig
@@ -10,7 +10,7 @@
         {% for c in categoryRepository.findall() %}
 
           <li class="nav-item">
-            <a href="#" class="nav-link">{{ c.name }}</a>
+            <a href={{ path("product_category", {"slug": c.slug})}} class="nav-link">{{ c.name }}</a>
           </li>
           
         {% endfor %}
@@ -18,6 +18,14 @@
       </ul>
 
       <ul class="navbar-nav">
+
+      <li class="nav-item">
+        <a href={{ path("cart_show")}} class="nav-link">
+          <i class="fas fa-shopping-cart">
+          </i>
+            Panier
+        </a>
+      </li>
         {% if app.user %}          
           <li class="nav-item"><a href={{ path("security_logout") }} class=" btn btn-danger">Logout</a></li>    
 
