décrémenter le panier en cours

--- a/e-commerce/templates/shared/_navbar.html.twig
+++ b/e-commerce/templates/shared/_navbar.html.twig
@@ -23,7 +23,7 @@
         <a href={{ path("cart_show")}} class="nav-link">
           <i class="fas fa-shopping-cart">
           </i>
-            Panier
+            Panier ({{ cartService.total }})
         </a>
       </li>
         {% if app.user %}          
