--- a/e-commerce/templates/cart/index.html.twig
+++ b/e-commerce/templates/cart/index.html.twig
@@ -12,6 +12,7 @@
                 <th>Prix</th>
                 <th>Quantité</th>
                 <th>Total</th>
+                <th></th>
             </tr>
         </thead>
 
@@ -20,8 +21,21 @@
                 <tr>
                     <td> {{ item.product.name }}</td>
                     <td> {{ item.product.price }}</td>
-                    <td> {{ item.qty }}</td>
-                    <td> {{ item.qty * item.product.price }}</td>
+                    <td>
+                     <a href={{ path("cart_add", {"id": item.product.id}) }} class="btn btn-sm btn-primary">
+                        <i class="fas fa-plus"></i>
+                     </a>
+                     {{ item.qty }}
+                      <a href={{ path("cart_decrement", {"id": item.product.id}) }} class="btn btn-sm btn-primary">
+                        <i class="fas fa-minus"></i>
+                     </a>
+                     </td>
+                    <td> {{ item.total }}</td>
+                    <td>
+                        <a href={{ path("cart_delete", {"id": item.product.id }) }} class="btn btn-sm btn-danger">
+                            <i class="fas fa-trash"></i>
+                        </a>  
+                     </td>
                 </tr>
             {% endfor %}
         </tbody>
@@ -29,7 +43,7 @@
         <tfoot>
             <tr>
                 <td colspan="3">Total</td>
-                <td> {{ total }} </td>
+                <td colspan="2"> {{ total }} </td>
             </tr>
         </tfoot>
     </table>
