--- a/e-commerce/templates/shared/_navbar.html.twig
+++ b/e-commerce/templates/shared/_navbar.html.twig
@@ -26,7 +26,8 @@
             Panier ({{ cartService.total }})
         </a>
       </li>
-        {% if app.user %}          
+        {% if app.user %}    
+          <li class="nav-item"><a href="#" class="nav-link">Mes commandes</a></li>      
           <li class="nav-item"><a href={{ path("security_logout") }} class=" btn btn-danger">Logout</a></li>    
 
         {% else %}
