premier recap doctrine 2

--- a/e-commerce/templates/purchase/index.html.twig
+++ b/e-commerce/templates/purchase/index.html.twig
@@ -13,6 +13,7 @@
                 <td>Numéro</td>
                 <td>Adresse</td>
                 <td>Date de commande</td>
+                <td>Produits commandés</td>
                 <td>Total</td>
             </tr>
         </thead>
@@ -22,8 +23,16 @@
                 <tr>
                     <td>{{ p.id }}</td>
                     <td>{{ p.adress }} <br> {{ p.postalCode }}, {{ p.city }} </td>
-                    <td>TODO</td>
+                    <td>{{ p.purchasedAt | date("d/m/Y H:i") }}</td>
+                    <td>
+                        <ul>
+                            {% for item in p.purchaseItems %}
+                                <li>{{ item.quantity}}x {{ item.productName }} ({{ item.total / 100}} €)</li>
+                            {% endfor %}
+                        </ul>
+                    </td>
                     <td>{{ p.total / 100 }}€</td>
+                   
                 </tr>
             {% endfor %}
         </tbody>
