--- a/e-commerce/templates/shared/_navbar.html.twig
+++ b/e-commerce/templates/shared/_navbar.html.twig
@@ -23,11 +23,11 @@
         <a href={{ path("cart_show")}} class="nav-link">
           <i class="fas fa-shopping-cart">
           </i>
-            Panier ({{ cartService.total }})
+            Panier ({{ cartService.total }}€)
         </a>
       </li>
         {% if app.user %}    
-          <li class="nav-item"><a href="#" class="nav-link">Mes commandes</a></li>      
+          <li class="nav-item"><a href={{ path("purchase_index")}} class="nav-link">Mes commandes</a></li>      
           <li class="nav-item"><a href={{ path("security_logout") }} class=" btn btn-danger">Logout</a></li>    
 
         {% else %}
