--- a/e-commerce/templates/cart/index.html.twig
+++ b/e-commerce/templates/cart/index.html.twig
@@ -50,6 +50,18 @@
             </tr>
         </tfoot>
     </table>
+
+    <hr>
+    <h2>  Confirmez votre commande avec le formulaire  </h2>
+
+    {{ form_start(confirmationForm, {"action": path("purchase_confirm")}) }}
+
+    {{ form_widget(confirmationForm) }}
+
+    <button type="submit" class="btn btn-success">Je confirme !</button>    
+
+    {{ form_end(confirmationForm) }}
+
     {% else %}
         <h4>Votre panier est vide</h4>
     {% endif %}
