--- a/e-commerce/templates/product/show.html.twig
+++ b/e-commerce/templates/product/show.html.twig
@@ -10,8 +10,9 @@
 
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path("homepage") }}">Accueil</a></li>
-        <li class="breadcrumb-item"><a href="{{ path("product_category",
-        {"slug": product.category.slug}) }}">{{ product.category.name }}</a></li>
+        <li class="breadcrumb-item">
+            <a href="{{ path("product_category",{"slug": product.category.slug}) }}">{{ product.category.name }}</a>
+        </li>
         <li class="breadcrumb-item active">{{ product.name }}</li>
     </ol>  
 
